--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Nate Garrow</title>
+		<meta
+			name="description"
+			content="Welcome to nategarrow.tech! Clients rave about working with Nate Garrow, a dynamic frontend web developer specializing in React. With a passion for learning new skills and delivering exceptional results, Nate transforms ideas into stunning, responsive websites. Discover innovative solutions and unparalleled expertise today!"
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
