--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,8 @@
 		/>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-static">
+	<body data-sveltekit-preload-data="hover" class="relative">
+		<div class="bg-static"></div>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
